--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "react-style": "^0.5.5",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "electron": "^1.6.6",
@@ -15,11 +18,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "electron": "export ELECTRON_START_URL=http://localhost:3000 && electron ."
+    "desktop": "export ELECTRON_START_URL=http://localhost:3000 && electron ."
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "homepage": "https://bitbucket.org/zoog/therion#readme",
-  "main": "./src/electron-index.js",
+  "main": "./src/index.desktop.js",
   "repository": {
     "type": "git",
     "url": "git+https://bitbucket.org/zoog/therion.git"
