Update package.json files of the mobile and web projects

--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -25,7 +25,7 @@
   "main": "./src/index.desktop.js",
   "repository": {
     "type": "git",
-    "url": "git+https://bitbucket.org/zoog/therion.git"
+    "url": "git+ssh://git@bitbucket.org/zoog/therion.git"
   },
   "author": "Kenneth Baylosis <kbaylosis@zoogtech.com>",
   "license": "ISC"
