--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mobile",
-  "version": "0.1.0",
+  "name": "therion-mobile",
+  "version": "0.0.0",
   "private": true,
   "devDependencies": {
     "react-native-scripts": "0.0.29",
@@ -22,5 +22,13 @@
     "expo": "^16.0.0",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.43.4"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React Native App](https://github.com/react-community/create-react-native-app).",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@bitbucket.org/zoog/therion.git"
+  },
+  "author": "Kenneth Baylosis <kbaylosis@zoogtech.com>",
+  "license": "ISC",
+  "homepage": "https://bitbucket.org/zoog/therion#readme"
 }
