--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -3,15 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "install": "^0.10.1",
+    "npm": "^4.6.1",
     "prop-types": "^15.5.9",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-style": "^0.5.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "electron": "^1.6.6",
+    "eslint": "^3.16.1",
+    "eslint-config-react-app": "^0.6.2",
+    "eslint-plugin-flowtype": "^2.21.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.4.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
