--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -15,8 +15,14 @@
     "reselect": "^3.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "electron": "^1.6.6",
-    "eslint-config-react-app": "file:../../packages/eslint-config-react-app",
+    "eslint": "^3.16.1",
+    "eslint-config-react-app": "^0.6.2",
+    "eslint-plugin-flowtype": "^2.21.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.4.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
