--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -18,8 +18,8 @@
   "scripts": {
     "start": "./node_modules/.bin/eslint . && react-native-scripts start",
     "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "android": "./node_modules/.bin/eslint . && react-native-scripts android",
+    "ios": "./node_modules/.bin/eslint . && react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
     "lint": "./node_modules/.bin/eslint ."
   },
