--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -15,7 +15,6 @@
     "reselect": "^3.0.1"
   },
   "devDependencies": {
-    "electron": "^1.6.6",
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
@@ -30,6 +29,7 @@
     "css-loader": "0.26.1",
     "detect-port": "1.1.0",
     "dotenv": "2.0.0",
+    "electron": "^1.6.6",
     "eslint": "3.16.1",
     "eslint-config-react-app": "^0.6.2",
     "eslint-loader": "1.6.0",
@@ -48,6 +48,7 @@
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "remote-redux-devtools": "^0.5.11",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
