Add global constants capability for mobile client

--- a/clients/mobile/.babelrc
+++ b/clients/mobile/.babelrc
@@ -1,5 +1,10 @@
 {
   "presets": ["babel-preset-expo"],
+  "plugins": [
+    ["module-alias", [
+      { "src": "./.globals", "expose": ".globals" }
+    ]]
+  ],
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
