--- a/clients/mobile/.babelrc
+++ b/clients/mobile/.babelrc
@@ -2,8 +2,8 @@
   "presets": ["babel-preset-expo"],
   "plugins": [
     ["module-alias", [
-      { "src": "./.globals", "expose": ".globals" },
-      { "src": "./src/app", "expose": "app" }
+      { "src": ".", "expose": "__proj" },
+      { "src": "./src", "expose": "__src" }
     ]]
   ],
   "env": {
