--- a/clients/mobile/android/app/src/main/AndroidManifest.xml
+++ b/clients/mobile/android/app/src/main/AndroidManifest.xml
@@ -29,4 +29,11 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
+    <intent-filter>
+      <action android:name="android.intent.action.VIEW" />
+      <category android:name="android.intent.category.DEFAULT" />
+      <category android:name="android.intent.category.BROWSABLE" />
+      <data android:scheme="therion"
+          android:host="therion" />
+    </intent-filter>
 </manifest>
