--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -57,11 +57,11 @@
     "whatwg-fetch": "2.0.2"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "desktop": "export ELECTRON_START_URL=http://localhost:3000 && electron .",
-    "precommit": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --format table --max-warnings 1 .
+    "start": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node scripts/start.js",
+    "build": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node scripts/build.js",
+    "test": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node scripts/test.js --env=jsdom",
+    "desktop": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && export ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "precommit": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 ."
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "homepage": "https://bitbucket.org/zoog/therion#readme",
