--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -8,7 +8,7 @@
     "android": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && react-native run-android",
     "test": "jest",
     "reset": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node node_modules/react-native/local-cli/cli.js start --reset-cache",
-    "precommit": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 ."
+    "precommit": "eslint --max-warnings 1 ."
   },
   "dependencies": {
     "native-base": "^2.1.3",
