--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -61,7 +61,7 @@
     "build": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node scripts/build.js",
     "test": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node scripts/test.js --env=jsdom",
     "desktop": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && export ELECTRON_START_URL=http://localhost:3000 && electron .",
-    "precommit": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 ."
+    "precommit": "eslint --max-warnings 1 ."
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "homepage": "https://bitbucket.org/zoog/therion#readme",
