Add the precommit linting script

--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -7,8 +7,7 @@
     "ios": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && react-native run-ios",
     "android": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && react-native run-android",
     "test": "jest",
-    "reset": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node node_modules/react-native/local-cli/cli.js start --reset-cache",
-    "precommit": "eslint --max-warnings 1 ."
+    "reset": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node node_modules/react-native/local-cli/cli.js start --reset-cache"
   },
   "dependencies": {
     "native-base": "^2.1.3",
