--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node node_modules/react-native/local-cli/cli.js start",
-    "ios": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && react-native run-ios",
-    "android": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && react-native run-android",
+    "start": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node node_modules/react-native/local-cli/cli.js start",
+    "ios": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && react-native run-ios",
+    "android": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && react-native run-android",
+    "log-ios": "react-native log-ios",
+    "log-android": "react-native log-android",
     "test": "jest",
-    "reset": "rm -rf __globals__ && cp -fR ../../globals __globals__ && eslint --max-warnings 1 . && node node_modules/react-native/local-cli/cli.js start --reset-cache"
+    "reset": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node node_modules/react-native/local-cli/cli.js start --reset-cache",
+    "lint": "eslint --max-warnings 1 .",
+    "lint-fix": "eslint --fix --max-warnings 1 .",
+    "precommit": "npm run lint"
   },
   "dependencies": {
     "native-base": "^2.1.3",
