--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -15,6 +15,7 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "eslint-plugin-react": "^7.4.0",
     "native-base": "^2.1.3",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.6",
