Upgrade to react-native@0.50.3 and react@16.0.0

--- a/clients/mobile/.gitignore
+++ b/clients/mobile/.gitignore
@@ -35,7 +35,6 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
-package-lock.json
 
 # BUCK
 buck-out/
@@ -47,10 +46,8 @@ buck-out/
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-
-__globals__
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
