--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -18,8 +18,8 @@
     "eslint-plugin-react": "^7.4.0",
     "native-base": "^2.1.3",
     "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.6",
-    "react-native": "0.44.0",
+    "react": "16.0.0",
+    "react-native": "^0.50.3",
     "react-native-vector-icons": "^4.1.1",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.5",
