--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -16,13 +16,13 @@
   },
   "dependencies": {
     "eslint-plugin-react": "^7.4.0",
-    "native-base": "^2.1.3",
+    "native-base": "2.3.3",
     "prop-types": "^15.5.10",
     "react": "16.0.0",
     "react-native": "^0.50.3",
     "react-native-vector-icons": "^4.1.1",
-    "react-navigation": "^1.0.0-beta.9",
-    "react-redux": "^5.0.5",
+    "react-navigation": "1.0.0-beta.19",
+    "react-redux": "5.0.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "remote-redux-devtools": "^0.5.11"
