--- a/clients/web/.eslintrc
+++ b/clients/web/.eslintrc
@@ -3,8 +3,7 @@
 
   "rules": {
     // Best Practices
-    "curly": "error",
-
+    "curly": "error", 
     // Stylistic Issues
     "block-spacing": "error",
     "brace-style": "error",
@@ -76,6 +75,8 @@
     "require-yield": "error",
     "rest-spread-spacing": ["error", "never"],
     "symbol-description": "error",
-    "yield-star-spacing": ["error", "after"]
+    "yield-star-spacing": ["error", "after"],
+    
+    "jsx-a11y/href-no-hash": "off",   
   }
 }
