--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -44,6 +44,7 @@
     "jest": "^21.2.1",
     "json-loader": "^0.5.7",
     "object-assign": "^4.1.1",
+    "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.8",
     "promise": "^8.0.1",
     "react-dev-utils": "^4.2.1",
