--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -20,6 +20,9 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-transform-remove-console": "^6.8.5",
     "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
