--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -47,12 +47,14 @@
     "http-proxy-middleware": "^0.17.4",
     "jest": "^21.2.1",
     "json-loader": "^0.5.7",
+    "node-sass": "^4.7.1",
     "object-assign": "^4.1.1",
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.8",
     "promise": "^8.0.1",
     "react-dev-utils": "^4.2.1",
     "remote-redux-devtools": "^0.5.12",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
