--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -3,12 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.0.0",
+    "chart.js": "^2.7.1",
     "install": "^0.10.2",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "react": "^16.1.1",
+    "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.1.1",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-style": "^0.5.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
@@ -47,6 +54,8 @@
     "http-proxy-middleware": "^0.17.4",
     "jest": "^21.2.1",
     "json-loader": "^0.5.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "node-sass": "^4.7.1",
     "object-assign": "^4.1.1",
     "postcss-flexbugs-fixes": "^3.2.0",
