--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -19,7 +19,7 @@
     "native-base": "2.3.3",
     "prop-types": "15.5.10",
     "react": "16.0.0",
-    "react-native": "^0.50.3",
+    "react-native": "^0.52.0-rc.0",
     "react-native-vector-icons": "4.4.2",
     "react-navigation": "1.0.0-beta.19",
     "react-redux": "5.0.6",
