--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -19,6 +19,9 @@
     "react-router-redux": "^5.0.0-alpha.8",
     "react-style": "^0.5.5",
     "redux": "^3.7.2",
+    "redux-storage": "^4.1.2",
+    "redux-storage-decorator-debounce": "^1.1.3",
+    "redux-storage-engine-localstorage": "^1.1.4",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   },
