--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -9,6 +9,7 @@
     "install": "^0.10.2",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
+    "rc-queue-anim": "^1.4.1",
     "react": "^16.1.1",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.1.1",
