--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.0.0",
     "chart.js": "^2.7.1",
     "history": "^4.7.2",
+    "immutable": "^3.8.2",
     "install": "^0.10.2",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
@@ -18,7 +19,6 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-style": "^0.5.5",
     "redux": "^3.7.2",
     "redux-storage": "^4.1.2",
     "redux-storage-decorator-debounce": "^1.1.3",
@@ -52,6 +52,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.5.1",
+    "estraverse": "^4.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
