--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -11,7 +11,7 @@
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "rc-queue-anim": "^1.4.1",
-    "react": "^16.2.0",
+    "react": "16.3.0-alpha.2",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.1.1",
     "react-loadable": "^5.3.1",
