--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,16 @@
   "name": "therion-server",
   "version": "0.0.0",
   "description": "The therion server",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --delay 3 --watch ./src --watch ./assets --exec npm run dev",
+    "dev": "npm run lint && npx babel-node src/server.js",
+    "lint": "node ./node_modules/eslint/bin/eslint ./src --format table --max-warnings=1 --fix && echo '✔  Your code looks good.'",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "npm run clean && npm run build && npm run copy-assets && node build/server.js",
+    "clean": "rm -Rf build && echo '✔  Clean build.'",
+    "copy-assets": "cp -R ./src/models ./build/models && cp -R ./src/mocks ./build/mocks && echo '✔  Copy assets.'",
+    "build": "npx babel ./src -d build && echo '✔  Transform files.'"
   },
   "author": "",
   "license": "ISC",
@@ -14,14 +20,23 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
-    "graphql-tools": "^3.0.4"
+    "graphql-tools": "^3.0.4",
+    "merge-graphql-schemas": "^1.5.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-plugin-wildcard": "^5.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "casual": "^1.5.19",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^3.1.0",
+    "nodemon": "^1.17.5"
   }
 }
