--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,9 +1,33 @@
 {
-	"extends": "standard",
+	"env": {
+			"browser": true,
+			"es6": true,
+		"node": true
+	},
+	"extends": "eslint:recommended",
+	"parserOptions": {
+		"ecmaVersion": 2018,
+		"sourceType": "module"
+	},
 	"rules": {
-		"semi": ["error", "always"],
-		"quotes": ["error", "double"],
-		"no-tabs": ["off"],
-		"import/no-duplicates": ["off"]
-	}
+		"indent": [
+			"error",
+			"tab"
+		],
+		"linebreak-style": [
+			"error",
+			"unix"
+		],
+		"quotes": [
+			"error",
+			"double"
+		],
+		"semi": [
+			"error",
+			"always"
+		],
+		"no-console": [
+			"off",
+		],
+	},
 }
