--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "The therion server",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --delay 3 --watch ./src --watch ./assets --exec npm run dev",
+    "start": "DEBUG=* nodemon --delay 3 --watch ./src --watch ./assets --exec npm run dev",
     "dev": "npm run lint && npx babel-node src/server.js",
     "lint": "node ./node_modules/eslint/bin/eslint ./src --format table --max-warnings=1 --fix && echo '✔  Your code looks good.'",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,6 +18,8 @@
   "dependencies": {
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.2",
+    "debug": "^3.1.0",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.4",
