Add transform-class-properties babel plugin

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,4 +1,5 @@
 {
+	"parser": "babel-eslint",
 	"env": {
 			"browser": true,
 			"es6": true,
@@ -10,21 +11,12 @@
 		"sourceType": "module"
 	},
 	"rules": {
-		"indent": [
-			"error",
-			"tab"
-		],
-		"linebreak-style": [
-			"error",
-			"unix"
-		],
-		"quotes": [
-			"error",
-			"double"
-		],
-		"semi": [
-			"error",
-			"always"
-		],
+		"indent": [ "error", "tab" ],
+		"linebreak-style": [ "error", "unix" ],
+		"quotes": [ "error", "double" ],
+		"semi": [ "error", "always" ],
+		"comma-spacing": ["error", { "before": false, "after": true }],
+		"comma-style": ["error", "last"],
+		"comma-dangle": ["error", "always-multiline"],
 	},
 }
