--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,4 +1,14 @@
 {
-	"presets": ["env", "stage-0"],
-	"plugins": ["wildcard"]
+	"presets": [[
+		"env", {
+			"targets": {
+				"node": "current"
+			}
+		}],
+		"stage-0",
+	],
+	"plugins": [
+		"wildcard", 
+		["transform-class-properties", { "spec": true }],
+	],
 }
