--- a/server/package.json
+++ b/server/package.json
@@ -23,11 +23,15 @@
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.4",
-    "merge-graphql-schemas": "^1.5.2"
+    "merge-graphql-schemas": "^1.5.2",
+    "mysql2": "^1.5.3",
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-wildcard": "^5.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
