Convert db models to graphql schemas

--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "The therion server",
   "main": "server.js",
   "scripts": {
-    "start": "DEBUG=* nodemon --delay 3 --watch ./src --watch ./assets --exec npm run dev",
+    "start": "DEBUG=therion:* nodemon  -e js,json,graphql --delay 3 --watch ./src --watch ./assets --exec npm run dev",
     "dev": "npm run lint && npx babel-node src/server.js",
-    "lint": "node ./node_modules/eslint/bin/eslint ./src --format table --max-warnings=1 --fix && echo '✔  Your code looks good.'",
+    "lint": "node ./node_modules/eslint/bin/eslint ./src --max-warnings=1 --fix && echo '✔  Your code looks good.'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "npm run clean && npm run build && npm run copy-assets && node build/server.js",
     "clean": "rm -Rf build && echo '✔  Clean build.'",
@@ -22,8 +22,14 @@
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "graphql-relay": "^0.5.5",
+    "graphql-sequelize": "^8.3.1",
     "graphql-tools": "^3.0.4",
+    "graphql-tools-sequelize": "^2.0.5",
+    "graphql-type-json": "^0.2.1",
+    "lodash": "^4.17.10",
     "merge-graphql-schemas": "^1.5.2",
+    "moment": "^2.22.2",
     "mysql2": "^1.5.3",
     "sequelize": "^4.38.0"
   },
