--- a/server/shrinkwrap.yaml
+++ b/server/shrinkwrap.yaml
@@ -14,6 +14,7 @@ dependencies:
   merge-graphql-schemas: 1.5.2
   moment: 2.22.2
   mysql2: 1.5.3
+  pluralize: 7.0.0
   sequelize: 4.38.0
 devDependencies:
   babel-cli: 6.26.0
@@ -3623,7 +3624,6 @@ packages:
     resolution:
       integrity: sha1-ektQio1bstYp1EcFb/TpyTFM89Q=
   /pluralize/7.0.0:
-    dev: true
     engines:
       node: '>=4'
     resolution:
@@ -4762,4 +4762,5 @@ specifiers:
   moment: ^2.22.2
   mysql2: ^1.5.3
   nodemon: ^1.17.5
+  pluralize: ^7.0.0
   sequelize: ^4.38.0
