--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -79,7 +79,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "start": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node scripts/start.js",
+    "start": "rm -rf __globals__ && cp -fR ../../globals __globals__ && node scripts/start.js",
     "build": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node scripts/build.js",
     "test": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node scripts/test.js --env=jsdom",
     "desktop": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && export ELECTRON_START_URL=http://localhost:3000 && electron .",
