Allowed requests to be sent from client to server

--- a/clients/web/.babelrc
+++ b/clients/web/.babelrc
@@ -6,7 +6,8 @@
 				"__proj": ".",
 				"__src" : "./src",
 				"__npm" : "./node_modules"
-		}}]
+		}}],
+		"graphql-tag",
 	],
 	"env": {
 		"production": {
