--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^3.0.0",
+    "apollo-boost": "^0.1.10",
     "chart.js": "^2.7.1",
+    "graphql": "^0.13.0",
+    "graphql-tag": "^2.9.2",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
-    "install": "^0.10.2",
+    "install": "^0.10.4",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "rc-queue-anim": "^1.4.1",
@@ -33,6 +36,7 @@
     "babel-jest": "^22.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-graphql-tag": "^1.6.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-remove-console": "^6.8.5",
     "babel-preset-react-app": "^3.1.0",
