--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
+    "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
