--- a/server/shrinkwrap.yaml
+++ b/server/shrinkwrap.yaml
@@ -2,6 +2,7 @@ dependencies:
   apollo-server-express: 1.3.6
   body-parser: 1.18.3
   compression: 1.7.2
+  cors: 2.8.4
   debug: 3.1.0
   express: 4.16.3
   graphql: 0.13.2
@@ -1441,6 +1442,15 @@ packages:
   /core-util-is/1.0.2:
     resolution:
       integrity: sha1-tf1UIgqivFq1eqtxQMlAdUUDwac=
+  /cors/2.8.4:
+    dependencies:
+      object-assign: 4.1.1
+      vary: 1.1.2
+    dev: false
+    engines:
+      node: '>=0.10.0'
+    resolution:
+      integrity: sha1-K9OB8usgECAQXNUOpZ2mMJBpRoY=
   /create-error-class/3.0.2:
     dependencies:
       capture-stack-trace: 1.0.0
@@ -4743,6 +4753,7 @@ specifiers:
   body-parser: ^1.18.3
   casual: ^1.5.19
   compression: ^1.7.2
+  cors: ^2.8.4
   debug: ^3.1.0
   eslint: ^5.0.1
   eslint-config-standard: ^11.0.0
