--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^1.3.6",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
