--- a/server/package.json
+++ b/server/package.json
@@ -16,19 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "graphql-relay": "^0.5.5",
     "graphql-sequelize": "^8.3.1",
     "graphql-tools": "^3.0.4",
-    "graphql-tools-sequelize": "^2.0.5",
-    "graphql-type-json": "^0.2.1",
+    "graphql-tools-types": "^1.1.25",
     "json-circular-stringify": "^0.0.1",
     "lodash": "^4.17.10",
     "merge-graphql-schemas": "^1.5.2",
