--- a/clients/web/.eslintrc
+++ b/clients/web/.eslintrc
@@ -22,7 +22,7 @@
     "max-len": ["error", 100, 2],
     "max-statements": ["error", 20],
     "max-statements-per-line": ["error", { "max": 1 }],
-    "new-cap": ["error", { "newIsCap": true }],
+    "new-cap": "off",
     "new-parens": "error",
     "newline-after-var": ["error", "always"],
     "newline-before-return": "error",
