Integrate firebase in server

--- a/server/firebase/.gitignore
+++ b/server/firebase/.gitignore
@@ -39,6 +39,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+functions/node_modules/
+functions/jspm_packages/
 
 # TypeScript v1 declaration files
 typings/
@@ -81,6 +83,7 @@ typings/
 
 build
 __globals__
+
 
 # sqlite db
 *.sqlite
