--- a/web/.eslintrc
+++ b/web/.eslintrc
@@ -12,7 +12,7 @@
     "comma-style": ["error", "last"],
     "comma-dangle": ["error", "always-multiline"],
     "consistent-this": ["error", "that"],
-    "eol-last": ["error", "always"],
+    "eol-last": "off",
     "func-call-spacing": ["error", "never"],
     "keyword-spacing": ["error", { "after": true }],
     "indent": ["error", "tab"],
@@ -22,7 +22,7 @@
     "max-len": ["error", 100, 2],
     "max-statements": ["error", 20],
     "max-statements-per-line": ["error", { "max": 1 }],
-    "new-cap": ["error", { "newIsCap": true }],
+    "new-cap": "off",
     "new-parens": "error",
     "newline-after-var": ["error", "always"],
     "newline-before-return": "error",
