--- a/web/package.json
+++ b/web/package.json
@@ -79,13 +79,14 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "start": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node scripts/start.js",
-    "build": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node scripts/build.js",
-    "test": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && node scripts/test.js --env=jsdom",
-    "desktop": "rm -rf __globals__ && cp -fR ../../globals __globals__ && npm run lint && export ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "start": "npm run setup && npm run lint && node scripts/start.js",
+    "build": "npm run setup && npm run lint && node scripts/build.js",
+    "test": "npm run setup && npm run lint && node scripts/test.js --env=jsdom",
+    "desktop": "npm run setup && npm run lint && export ELECTRON_START_URL=http://localhost:3000 && electron .",
     "lint": "eslint --max-warnings 1 .",
     "lint-fix": "eslint --fix --max-warnings 1 .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "setup": "rm -rf ./src/commons && cp -fR ../commons ./src/commons"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "homepage": "https://bitbucket.org/zoog/therion#readme",
