--- a/web/shrinkwrap.yaml
+++ b/web/shrinkwrap.yaml
@@ -7,6 +7,7 @@ dependencies:
   immutable: 3.8.2
   install: 0.10.4
   lodash: 4.17.10
+  moment: 2.22.2
   pluralize: 7.0.0
   prop-types: 15.6.2
   raf: 3.4.0
@@ -10109,6 +10110,7 @@ specifiers:
   less: ^2.7.3
   less-loader: ^4.0.5
   lodash: ^4.17.10
+  moment: ^2.22.2
   node-sass: ^4.7.1
   object-assign: ^4.1.1
   pluralize: ^7.0.0
