--- a/mobile/package.json
+++ b/mobile/package.json
@@ -33,6 +33,7 @@
     "babel-eslint": "8.0.2",
     "babel-jest": "21.2.0",
     "babel-plugin-module-resolver": "3.0.0",
+    "babel-plugin-wildcard": "^5.0.0",
     "babel-preset-react-native": "4.0.0",
     "eslint": "4.11.0",
     "eslint-config-react-native": "1.6.0",
