--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "therion-mobile",
+  "name": "therionmobile",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.55",
+    "@babel/plugin-transform-react-jsx-source": "^7.0.0-beta.55",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.55",
+    "@babel/runtime": "^7.0.0-beta.55",
+    "babel-jest": "^23.4.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-wildcard": "^5.0.0",
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "eslint": "^5.2.0",
     "eslint-config-react-native": "^3.0.0",
-    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-import-resolver-babel-module": "5.0.0-beta.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
     "jest": "^23.4.2",
     "jest-react-native": "^18.0.0",
+    "patch-package": "^5.1.1",
+    "postinstall-prepare": "^1.0.1",
     "react-test-renderer": "16.3.1",
     "remote-redux-devtools": "^0.5.12"
   },
@@ -28,7 +33,8 @@
     "lint": "eslint --max-warnings 1 .",
     "lint-fix": "eslint --fix --max-warnings 1 .",
     "precommit": "npm run lint",
-    "setup": "rm -rf ./src/commons && cp -fR ../commons ./src/commons"
+    "setup": "rm -rf ./src/commons && cp -fR ../commons ./src/commons",
+    "prepare": "patch-package"
   },
   "jest": {
     "preset": "react-native"
@@ -38,8 +44,8 @@
     "native-base": "^2.7.2",
     "pluralize": "^7.0.0",
     "prop-types": "^15.6.2",
-    "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "react": "^16.4.1",
+    "react-native": "^0.56.0",
     "react-navigation": "^2.9.3",
     "react-navigation-fluid-transitions": "^0.2.2",
     "react-navigation-redux-helpers": "^2.0.4",
