--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zoog-hris",
-  "version": "0.0.0",
+  "name": "therion-web",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^3.0.0",
