--- a/web/package.json
+++ b/web/package.json
@@ -16,11 +16,11 @@
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "rc-queue-anim": "^1.4.1",
-    "react": "16.3.0-alpha.2",
+    "react": "^16.4.1",
     "react-chartjs-2": "^2.6.4",
-    "react-dom": "^16.1.1",
+    "react-dom": "^16.4.1",
     "react-loadable": "^5.3.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
