--- a/server/firebase/functions/package.json
+++ b/server/firebase/functions/package.json
@@ -35,7 +35,7 @@
     "moment": "^2.22.2",
     "mysql2": "^1.5.3",
     "pluralize": "^7.0.0",
-    "sequelize": "^4.38.0"
+    "sequelize": ">=5.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
