--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,27 +1,7 @@
 {
-  "name": "therion-mobile",
+  "name": "therionmobile",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "@babel/core": "^7.0.0-beta.55",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.55",
-    "@babel/plugin-transform-react-jsx-source": "^7.0.0-beta.55",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.55",
-    "@babel/runtime": "^7.0.0-beta.55",
-    "babel-jest": "^23.4.2",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-wildcard": "^5.0.0",
-    "eslint-config-react-native": "^3.0.0",
-    "eslint-import-resolver-babel-module": "5.0.0-beta.0",
-    "eslint-plugin-import": "^2.13.0",
-    "husky": "^0.14.3",
-    "jest": "^23.4.2",
-    "jest-react-native": "^18.0.0",
-    "patch-package": "^5.1.1",
-    "postinstall-prepare": "^1.0.1",
-    "react-test-renderer": "16.3.1",
-    "remote-redux-devtools": "^0.5.12"
-  },
   "scripts": {
     "start": "npm run setup && npm run lint && react-native start",
     "reset": "npm run setup && npm run lint && react-native start --reset-cache",
@@ -32,25 +12,52 @@
     "test": "jest",
     "lint": "eslint --max-warnings 1 .",
     "lint-fix": "eslint --fix --max-warnings 1 .",
-    "precommit": "npm run lint",
     "setup": "rm -rf ./src/commons && cp -fR ../commons ./src/commons",
     "prepare": "patch-package"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "native-base": "^2.13.4",
+    "pluralize": "^7.0.0",
+    "prop-types": "^15.6.2",
+    "react": "~16.8.6",
+    "react-native": "~0.60.5",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-navigation": "^3.11.1",
+    "react-navigation-fluid-transitions": "^0.3.2",
+    "react-navigation-redux-helpers": "^3.0.2",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-transform-react-jsx-source": "^7.5.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.8.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-wildcard": "^5.0.0",
+    "eslint": "^6.1.0",
+    "eslint-import-resolver-babel-module": "^5.1.0",
+    "husky": "^3.0.3",
+    "jest": "^24.8.0",
+    "jest-react-native": "^18.0.0",
+    "metro-react-native-babel-preset": "^0.56.0",
+    "patch-package": "^6.1.2",
+    "postinstall-prepare": "^1.0.1",
+    "react-test-renderer": "~16.8.6",
+    "remote-redux-devtools": "^0.5.16"
   },
   "jest": {
     "preset": "react-native"
   },
-  "dependencies": {
-    "lodash": "^4.17.10",
-    "native-base": "^2.7.2",
-    "pluralize": "^7.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-native": "^0.56.0",
-    "react-navigation": "^2.9.3",
-    "react-navigation-fluid-transitions": "^0.2.2",
-    "react-navigation-redux-helpers": "^2.0.4",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
