--- a/mobile/.eslintrc
+++ b/mobile/.eslintrc
@@ -8,6 +8,9 @@
     },
   },
   "rules": {
+    // Disable prettier config from react-native
+    "prettier/prettier": 0,
+
     // Best Practices
     "curly": "error",
 
@@ -26,8 +29,7 @@
     "func-call-spacing": ["error", "never"],
     "key-spacing": ["error", { "beforeColon": false, "afterColon": true }],
     "keyword-spacing": ["error", { "after": true }],
-    // Disable in favor for prettier
-    // "indent": ["error", "tab"],
+    "indent": ["error", "tab"],
     "line-comment-position": ["error", { "position": "above" }],
     "linebreak-style": ["error", "unix"],
     "max-depth": ["error", 4],
