--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,13 @@
     "immutable": "^3.8.2",
     "install": "^0.10.2",
     "lodash": "^4.17.10",
+    "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.22.2",
     "pluralize": "^7.0.0",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "rc-queue-anim": "^1.4.1",
-    "react": "^16.4.1",
+    "react": "16.9.0",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^16.4.1",
     "react-loadable": "^5.3.1",
@@ -29,12 +30,14 @@
     "redux-storage-decorator-debounce": "^1.1.3",
     "redux-storage-engine-localstorage": "^1.1.4",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "uglifyjs-3-webpack-plugin": "^1.2.4",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "^22.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -52,18 +55,19 @@
     "detect-port": "^1.2.2",
     "dotenv": "^5.0.0",
     "electron": "^1.7.9",
-    "eslint": "^4.11.0",
-    "eslint-config-react-app": "^2.0.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "estraverse": "^4.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-alpha.0",
     "file-loader": "^1.1.5",
     "fs-extra": "^5.0.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.17.4",
     "jest": "^22.2.1",
     "json-loader": "^0.5.7",
@@ -74,15 +78,16 @@
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "^2.0.8",
     "promise": "^8.0.1",
-    "react-dev-utils": "^5.0.0",
+    "react-dev-utils": "6.0.0-next.3e165448",
     "remote-redux-devtools": "^0.5.12",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-server": ">=3.1.11",
-    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-manifest-plugin": "^2.0.4",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
